# Haskell

./: Factorial.hs  Haskell.pptx  MersennePrimes.hs  Monads.docx  Python Lambda.docx
Haskell Programs/: CommonWords.lhs  Double.lhs  HelloWorld.lhs  HelloWorld2.lhs  ListDemo.lhs  Main.hs  MersenneLucasLehmer.hi  MersenneLucasLehmer.hs  MersenneLucasLehmer2.hs  Numbers2Words.lhs  PartialFunction.lhs  PrimePairs.hs  PrimePairs3.hs
Haskell Programs/List Operations.hsproj/: Main.hs  _Main.hsplay
Haskell Programs/Mersenne.hsproj/: .uuid  Main.hs  Mersenne.cabal  _Main.hsplay
List Operations.hsproj/: .uuid  ListOperations.cabal
