name: Mersenne
version: 1.0
cabal-version: 1.22
build-type: Simple
license: PublicDomain
copyright: Monford Sofware
stability: experimental
synopsis: The tool finds Mersenne Primes
category: Mathematical tool
author: Tim Powell
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable Mersenne
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010

